15.jan (ws)
      - added photomode icon
      - new style parameter: ledger line length
      - fix spacing for displaced note heads in multi voice context
      - fix beam layout for staff crossing beams: under some conditions
        note stems were too short
13.jan (ws)
      - implement screenshot/print mode for foto mode
      - add background and resolution to foto mode context menu
      - foto mode: use resolution/background in preferences for output
      - use end bar line segment for anchoring volta bracket end; this eliminates
        empty chord/rest segments previously used for this
12.jan (mi)
      - note minimum spacing algorithm (in Chord::layout() ) applied to tablature staves too
        (without any change to the algorithm itself)
11.jan (ws)
      - fix #8608: crash on loading 0.9.6.3 file
      - fix repeat regression (testfiles test/repeat*.mscz)
      - applied patch from fnbecker (#8404); needs more testing
       (la)
      - fix #8613: MuseScore doesn't ask to restore session if you open from file
      - fix #8612: Cannot paste to measure with a grace note before beat 1
08.jan (lv)
      - fix #8499: musicxml import/export: print-object="no" fixes
      - fix #8475: musicxml import: Audiveris ".0" not handled in alter and in backup and forward duration
      - fix #8429: musicxml import: voices mixed up
       (mi)
      - Cosmetic changes to Staff Type Properties Dlg Box
      - In non-stemless tablature staves, stems, hooks and beams moved to a running
        strip above the staff.
07.jan (ws)
      - fix repeats
      - new command line option to override config path (#6599)
      - implement dynamics for linked parts
      - new symbols for grace note palett
      - fix grace note entry
06.jan (ws)
      - add SlurSegment into "inspector"
      - more slur optimizations
       (la)
      - enable time signature deletion in timesig palette
05.jan (ws)
      - "reset to default" resets stem direction of chords to "auto"